2008-02-28  Andy Buckley  <andy@insectnation.org>

	* Added --enable-jade flag for Professor studies with patched
	FastJet.

	* Minor fixes to LCG tag generator and gfilt m4 macros.

	* Fixed projection slicing issues with Field UE analysis.

	* Added Analysis::vetoEvent(e) function, which keeps track of the
	correction to the sum of weights due to event vetoing in analysis
	classes.

2008-02-26  Andy Buckley  <andy@insectnation.org>

	* Vector<N> and derived classes now initialise to have zeroed
	components when the no-arg constructor is used.

	* Added Analysis::scale() function to scale 1D
	histograms. Analysis::normalize() uses it internally, and the
	DELPHI (A)EEC, whose histo weights are not pure event weights, and
	normalised using scale(h, 1/sumEventWeights).

2008-02-21  Hendrik Hoeth  <hendrik.hoeth@cern.ch>

	* Added EEC and AEEC to the DELPHI_1996_S3430090 analysis. The
	normalisation of these histograms is still broken (ticket #163).

2008-02-19  Hendrik Hoeth  <hendrik.hoeth@cern.ch>

	* Many fixes to the DELPHI_1996_S3430090 analysis: bugfix in the
	calulation of eigenvalues/eigenvectors in MatrixDiag.hh for the
	sphericity, rewrite of Thrust/Major/Minor, fixed scaled momentum,
	hemisphere masses, normalisation in single particle events,
	final state slicing problems in the projections for Thrust,
	Sphericity and Hemispheres.

2008-02-08  Andy Buckley  <andy@insectnation.org>

	* Applied fixes and extensions to DIS classes, based on
	submissions by Dan Traynor.

2008-02-06  Andy Buckley  <andy@insectnation.org>

	* Made projection pointers used for cut combining into const
	pointers. Required some redefinition of the Projection* comparison
	operator.

	* Temporarily added FinalState member to ChargedFinalState to stop
	projection lifetime crash.

2008-02-01  Andy Buckley  <andy@insectnation.org>

	* Fixed another misplaced factor of bin width in the
	Analysis::normalize() method.

2008-01-30  Andy Buckley  <andy@insectnation.org>
