@@ -1,3 +1,9 @@
+2008-03-10  Andy Buckley  <andy@insectnation.org>
+
+	* Profile histograms now use error computation with proper
+	weighting, as described here:
+	http://en.wikipedia.org/wiki/Weighted_average
+
 2008-02-28  Andy Buckley  <andy@insectnation.org>
 
 	* Added --enable-jade flag for Professor studies with patched
